--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
 openai = "^1.51.0"
-pydantic = "^2.9.2"
-fastapi = "^0.115.0"
 httpx = "^0.27.2"
 streamlit = "^1.39.0"
+psycopg = "3.2.1"
+typing-extensions = "4.11.0"
+pydantic = "^2.9.2"
 
 
 [build-system]
