--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ streamlit = "^1.39.0"
 psycopg = "3.2.1"
 typing-extensions = "4.11.0"
 pydantic = "^2.9.2"
+litellm = "^1.52.0"
 
 
 [build-system]
