--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,17 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
-openai = "^1.51.0"
 httpx = "^0.27.2"
-streamlit = "^1.39.0"
-psycopg = "3.2.1"
 typing-extensions = "4.11.0"
 pydantic = "^2.9.2"
 litellm = "^1.52.0"
 
+
+[tool.poetry.group.dev.dependencies]
+boto3 = "^1.35.57"
+mysql-connector-python = "^9.1.0"
+psycopg = {extras = ["binary"], version = "^3.2.1"}
+streamlit = "^1.39.0"
 
 [build-system]
 requires = ["poetry-core"]
