--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Daniel Lee <dannylee1020@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.12"
+python = "^3.12"
 pydantic = "^2.9.2"
 litellm = "^1.52.0"
 
