--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "peony"
 version = "0.1.0"
 description = "Preference Optimization made easy"
 authors = ["Daniel Lee <dannylee1020@gmail.com>"]
+license = "Apache-2.0"
+keywords = ["llm", "finetuning", "preference optimization, rlhf"]
+include = ["LICENSE", "README.md"]
+repository = "https://github.com/dannylee1020/peony"
 readme = "README.md"
 
 [tool.poetry.dependencies]
