--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "peony"
+name = "openpo"
 version = "0.1.0"
 description = "Preference Optimization made easy"
 authors = ["Daniel Lee <dannylee1020@gmail.com>"]
@@ -12,12 +12,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pydantic = "^2.9.2"
-litellm = "^1.52.0"
+litellm = "<=1.52.5"
+boto3 = "^1.35.57"
+psycopg = {extras = ["binary"], version = "^3.2.1"}
+numpy = "^2.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
-boto3 = "^1.35.57"
-psycopg = {extras = ["binary"], version = "^3.2.1"}
 streamlit = "^1.39.0"
 
 [build-system]
