--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Daniel Lee <dannylee1020@gmail.com>"]
 license = "Apache-2.0"
 keywords = ["llm", "finetuning", "preference optimization, rlhf"]
 include = ["LICENSE", "README.md"]
-repository = "https://github.com/dannylee1020/peony"
+repository = "https://github.com/dannylee1020/openpo"
 readme = "README.md"
 
 [tool.poetry.dependencies]
