--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,13 @@ litellm = "<=1.52.5"
 boto3 = "^1.35.57"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 numpy = "^2.1.3"
+huggingface-hub = "^0.26.2"
+httpx = "^0.27.2"
 
 
 [tool.poetry.group.dev.dependencies]
 streamlit = "^1.39.0"
+mkdocs-material = "^9.5.44"
 
 [build-system]
 requires = ["poetry-core"]
