--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg = {extras = ["binary"], version = "^3.2.1"}
 numpy = "^2.1.3"
 huggingface-hub = "^0.26.2"
 httpx = "^0.27.2"
+aiohttp = "^3.11.7"
 
 
 [tool.poetry.group.dev.dependencies]
