--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 description = "Preference Optimization made easy"
 authors = ["Daniel Lee <dannylee1020@gmail.com>"]
 license = "Apache-2.0"
-keywords = ["llm", "finetuning", "preference optimization, rlhf"]
+keywords = ["llm", "finetuning", "preference optimization, rlhf", "fine-tuning"]
 include = ["LICENSE", "README.md"]
 repository = "https://github.com/dannylee1020/openpo"
 documentation="https://docs.openpo.dev"
