--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: OpenPO Documentation
 site_url: https://docs.openpo.dev
 site_author: Daniel Lee
+repo_url: https://github.com/dannylee1020/openpo
+repo_name: dannylee1020/openpo
 theme:
   name: material
   palette:
@@ -9,20 +11,22 @@ theme:
       primary: indigo
       accent: indigo
       toggle:
-        icon: material/brightness-7
+        icon: material/weather-night
         name: Switch to dark mode
     - media: "(prefers-colors-scheme:dark)"
       scheme: slate
       primary: black
       accent: black
       toggle:
-        icon: material/brightness-4
+        icon: material/weather-sunny
         name: Switch to light mode
   features:
     - navigation.sections
     - search.highlight
     - content.code.copy
     - def_list
+  icon:
+    repo: fontawesome/brands/github
 
 # Extension for better code blocks, admonitions, etc.
 markdown_extensions:
@@ -35,13 +39,12 @@ markdown_extensions:
   - pymdownx.snippets
 
 nav:
-  - Getting Started:
-    - Welcome: index.md
-    - Installation: installation.md
-    - Quick Start: quickstart.md
-    - Structured Output (JSON Mode): json.md
-    - Preference Response: preference.md
-    - Storage: storage.md
-    - Parameters: parameters.md
-    - Responses: response.md
-    - Errors: errors.md
+  - Welcome: index.md
+  - Installation: installation.md
+  - Quick Start: quickstart.md
+  - Structured Output (JSON Mode): json.md
+  - Pairwise Response: preference.md
+  - Storage: storage.md
+  - Parameters: parameters.md
+  - Responses: response.md
+  - Errors: errors.md
