--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -10,9 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       docs: ${{ steps.filter.outputs.docs }}
+      deps: ${{ steps.filter.outputs.deps }}
     steps:
-      - uses: actions/checkout@v4
-
       - uses: dorny/paths-filter@v2
         id: filter
         with:
@@ -20,6 +19,27 @@ jobs:
             docs:
               - 'docs/**'
               - 'mkdocs.yml'
+            deps:
+              - 'pyproject.toml'
+
+  setup-poetry:
+    needs: changes
+    if: ${{ needs.changes.outputs.deps == 'true' && needs.changes.outputs.docs == 'true'  }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Poetry
+        run: curl -sSL https://install.python-poetry.org | python3 -
+
+
+      - name: Install dependencies
+        run: poetry install --no-interaction
 
   publish:
     needs: changes
