--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 description = "Build high quality synthetic datasets with AI feedback from 200+ LLMs"
 authors = ["Daniel Lee <dannylee1020@gmail.com>"]
 license = "Apache-2.0"
-keywords = ["llm", "finetuning", "ai", "rlaif", "preference tuning", "synthetic data generation"]
+keywords = ["llm", "finetuning", "ai", "rlaif", "preference tuning", "synthetic data generation", "synthetic data"]
 include = ["LICENSE", "README.md"]
 repository = "https://github.com/dannylee1020/openpo"
 documentation="https://docs.openpo.dev"
