--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -36,11 +36,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Poetry
+      - name: Install dependencies
         run: |
            curl -sSL https://install.python-poetry.org | python3 -
-      - name: Install dependencies
-        run: poetry install
+           poetry install
 
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
@@ -49,4 +48,4 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: mkdocs gh-deploy --force
+      - run: poetry run mkdocs gh-deploy --force
