--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,11 @@ readme = "README.md"
 python = ">=3.10.1"
 pydantic = "^2.9.2"
 boto3 = "^1.35.57"
-numpy = "^2.1.3"
+numpy = "^1.26.4"
 huggingface-hub = "^0.26.2"
 httpx = "^0.27.2"
-aiohttp = "^3.11.7"
-
+datasets = "^3.1.0"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 streamlit = "^1.39.0"
