--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,10 @@ huggingface-hub = "^0.26.2"
 httpx = "^0.27.2"
 datasets = "^3.1.0"
 pandas = "^2.2.3"
+openai = "^1.57.1"
+anthropic = "^0.40.0"
 
 [tool.poetry.group.dev.dependencies]
-streamlit = "^1.39.0"
 mkdocs-material = "^9.5.44"
 mkdocstrings-python = "^1.12.2"
 
