--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,10 +21,10 @@ theme:
         icon: material/weather-sunny
         name: Switch to light mode
   features:
-    - navigation.sections
     - search.highlight
     - content.code.copy
     - def_list
+    - navigation.expand
   icon:
     repo: fontawesome/brands/github
 
@@ -66,12 +66,16 @@ nav:
   - Welcome: index.md
   - Installation: installation.md
   - Quick Start: quickstart.md
-  - Usage: usage.md
-  - Structured Output (JSON Mode): json.md
-  - Storage: storage.md
+  - Usage:
+    - Completions: completions.md
+    - Evaluations: evaluations.md
+    - Structured Output (JSON): json.md
+    - Storage: storage.md
   - Providers: provider.md
   - Parameters: parameters.md
   - Responses: response.md
   - Errors: errors.md
-  - Resources: resource.md
+  - Resources:
+    - Notebooks: notebook.md
+    - Research: research.md
   - API Reference: api.md
