--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ documentation="https://docs.openpo.dev"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10.1"
+python = ">=3.10.1,<4.0"
 pydantic = "^2.9.2"
 boto3 = "^1.35.57"
 numpy = "^1.26.4"
@@ -19,10 +19,15 @@ huggingface-hub = "^0.26.2"
 httpx = "^0.27.2"
 datasets = "^3.1.0"
 pandas = "^2.2.3"
+
+[tool.poetry.group.eval.dependencies]
+llm-blender = "^0.0.2"
+prometheus-eval = "^0.1.20"
+vllm = "^0.6.4.post1"
 openai = "^1.57.1"
 anthropic = "^0.40.0"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.docs.dependencies]
 mkdocs-material = "^9.5.44"
 mkdocstrings-python = "^1.12.2"
 
