--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
            curl -sSL https://install.python-poetry.org | python3 -
-           poetry install --with docs
+           poetry install --without eval
 
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
