--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "openpo"
-version = "0.5.2"
+version = "0.5.3"
 description = "Build high quality synthetic datasets with AI feedback from 200+ LLMs"
 authors = ["Daniel Lee <dannylee1020@gmail.com>"]
 license = "Apache-2.0"
@@ -20,12 +20,12 @@ httpx = "^0.27.2"
 datasets = "^3.1.0"
 pandas = "^2.2.3"
 
-[tool.poetry.group.eval.dependencies]
-llm-blender = "^0.0.2"
-prometheus-eval = "^0.1.20"
-vllm = "^0.6.4.post1"
-openai = "^1.57.1"
-anthropic = "^0.40.0"
+llm-blender = {version = "^0.0.2", optional = true}
+prometheus-eval = {version = "^0.1.20", optional = true}
+vllm = {version = "^0.6.4.post1", optional = true}
+openai = {version = "^1.57.1", optional = true}
+anthropic = {version = "^0.40.0", optional = true}
+
 
 [tool.poetry.group.docs.dependencies]
 mkdocs-material = "^9.5.44"
