--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,12 @@ huggingface-hub = "^0.26.2"
 httpx = "^0.27.2"
 datasets = "^3.1.0"
 pandas = "^2.2.3"
+openai = "^1.57.1"
+anthropic = "^0.40.0"
 
 llm-blender = {version = "^0.0.2", optional = true}
 prometheus-eval = {version = "^0.1.20", optional = true}
 vllm = {version = "^0.6.4.post1", optional = true}
-openai = {version = "^1.57.1", optional = true}
-anthropic = {version = "^0.40.0", optional = true}
 
 
 [tool.poetry.group.docs.dependencies]
@@ -32,7 +32,7 @@ mkdocs-material = "^9.5.44"
 mkdocstrings-python = "^1.12.2"
 
 [tool.poetry.extras]
-eval = ["llm-blender", "prometheus-eval", "vllm", "openai", "anthropic"]
+eval = ["llm-blender", "prometheus-eval", "vllm"]
 
 [build-system]
 requires = ["poetry-core"]
