--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ anthropic = "^0.40.0"
 llm-blender = {version = "^0.0.2", optional = true}
 prometheus-eval = {version = "^0.1.20", optional = true}
 vllm = {version = "^0.6.4.post1", optional = true}
-triton = {version = "^3.1.0", optional = true}
+triton = {version = '3.1.0', optional = true}
 
 
 [tool.poetry.group.docs.dependencies]
@@ -33,7 +33,8 @@ mkdocs-material = "^9.5.44"
 mkdocstrings-python = "^1.12.2"
 
 [tool.poetry.extras]
-eval = ["llm-blender", "prometheus-eval", "vllm", "triton"]
+eval= ["llm-blender", "prometheus-eval", "vllm", "triton"]
+vllm = ["vllm", "triton"]
 
 [build-system]
 requires = ["poetry-core"]
